@@ -51,6 +51,7 @@
 
 #include <boost/program_options.hpp>
 
+#include <iostream>
 #include <algorithm>
 #include <sstream>
 #include <vector>
