@@ -80,7 +80,7 @@ noinst_HEADERS = \
 rcsslogplayer_CPPFLAGS = -I$(top_srcdir) $(QT4_CPPFLAGS)
 rcsslogplayer_CXXFLAGS = -Wall $(QT4_CXXFLAGS)
 rcsslogplayer_LDFLAGS = -L$(top_builddir)/rcsslogplayer $(QT4_LDFLAGS)
-rcsslogplayer_LDADD = -lrcssrcgparser $(QT4_LDADD) $(BOOST_PROGRAM_OPTIONS_LIB)
+rcsslogplayer_LDADD = -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB) $(QT4_LDADD)
 
 # source files from headers generated by Meta Object Compiler
 moc_%.cpp: %.h
