@@ -46,6 +46,7 @@
 #include <boost/program_options.hpp>
 #endif
 
+#include <iostream>
 #include <string>
 #include <fstream>
 #include <cstdio>
